--- a/src/app.css
+++ b/src/app.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 @layer base {
-  html {
-    font-family: 'Courier';
-  }
+	html {
+		font-family: 'Courier';
+	}
 }
 
 body {
@@ -20,15 +20,15 @@ body {
 }
 
 #main-title {
-	font-size: 3em;
+	/* font-size: 3em; */
 	color: #32cd32;
 	/* color: rgb(163 230 53); */
 }
 
 .glitch {
-	font-size: 8rem;
+	/* font-size: 8rem; */
 	font-weight: 700;
-	text-transform: uppercase;
+	/* text-transform: uppercase; */
 	position: relative;
 
 	text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75), -0.025em -0.05em 0 rgba(0, 255, 0, 0.75),
