--- a/src/app.css
+++ b/src/app.css
@@ -10,24 +10,19 @@
 
 body {
 	background-color: #232323;
-	/* color: white; */
 	color: #32cd32;
 	font-family: 'Courier';
-	background-image: url('./img/bg.gif');
+	background-image: url('/img/bg.gif');
 	background-repeat: repeat;
 	background-attachment: fixed;
 }
 
 #main-title {
-	/* font-size: 3em; */
 	color: #32cd32;
-	/* color: rgb(163 230 53); */
 }
 
 .glitch {
-	/* font-size: 8rem; */
 	font-weight: 700;
-	/* text-transform: uppercase; */
 	position: relative;
 
 	text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75), -0.025em -0.05em 0 rgba(0, 255, 0, 0.75),
